--- a/style.css
+++ b/style.css
@@ -9,273 +9,225 @@
   --fw-400: 400;
   --fw-500: 500;
   --fw-700: 700;
+  --fs: 1rem;
+  scroll-behavior: smooth;
 }
 
-* {
-  margin: 0;
+*,
+*::before,
+*::after {
   box-sizing: border-box;
+  margin: 0;
   padding: 0;
 }
 
-html {
-  font-size: 16px;
-}
-
 body {
-  position: relative;
-  font-family: "Hanken Grotesk", sans-serif;
-  width: 100vw;
-  overflow-x: hidden;
+  font-family: 'Hanken Grotesk', sans-serif;
+  font-size: var(--fs);
+  background-color: var(--color-quaternary);
+  color: var(--color-text-description);
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-/* Buttons */
-
-.btn {
-  transition: all 0.75s;
-  background-color: transparent;
-  border: 1px solid var(--color-secondary);
-  padding: 1rem 2rem;
-  cursor: pointer;
-  gap: 1rem;
-  font-size: 0.875rem;
-  font-family: "Hanken Grotesk", sans-serif;
+.h1 {
+  font-weight: var(700);
+  line-height: 4.11rem;
+  font-size: calc(2.4rem + 2.15vw);
   color: var(--color-text-header);
 }
 
-.btn:hover {
+.h1 .second {
+  font-weight: var(--fw-400);
+}
+
+.first {
+  position: relative;
+  z-index: 1;
+}
+
+.lead {
+  font-size: 1.266rem;
+  font-weight: var(--fw-400);
+  line-height: 1.766rem;
+  color: var(--color-text-header);
+}
+
+.lead span {
+  text-decoration: line-through;
+}
+
+/*  Buttons */
+
+button {
+  border-radius: 0;
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  text-transform: none;
+}
+
+button:focus:not(:focus-visible) {
+  outline: 0;
+}
+
+[role='button'] {
+  cursor: pointer;
+}
+
+button,
+[type='button'],
+[type='reset'],
+[type='submit'] {
+  -webkit-appearance: button;
+}
+
+button:not(:disabled),
+[type='button']:not(:disabled),
+[type='reset']:not(:disabled),
+[type='submit']:not(:disabled) {
+  cursor: pointer;
+}
+
+.button-style {
+  transition: all 0.75s;
+  background-color: transparent;
+  border: 1px solid var(--color-secondary);
+  box-shadow: none;
+  padding: 1rem 2rem;
+  font-size: 0.875rem;
+  color: var(--color-text-header);
+  border-radius: 0;
+}
+
+.button-style:hover {
   border-color: var(--color-secondary);
   background-color: var(--color-secondary);
   font-weight: var(--fw-700);
   color: var(--color-text-main);
 }
 
-.btn:hover .fa-arrow-right {
-  color: var(--color-text-main);
+.btn--header {
+  background-color: var(--color-tertiary);
+  color: var(--color-secondary);
+  padding: 1.875rem 2rem 2rem;
+  border: none;
 }
 
 .fa-arrow-right {
   transition: all 0.75s;
-  margin-left: 1rem;
+  margin-left: 0.5rem;
   color: var(--color-secondary);
 }
 
 .btn--know-us {
-  position: absolute;
-  z-index: 1;
-  bottom: 0;
-  left: 0;
-  padding-left: 18.75rem;
-}
-
-.btn--header {
-  border: 0;
-  padding: 1.875rem 2rem 2rem;
-  width: 6rem;
-  height: 5.875rem;
-  background-color: var(--color-tertiary);
-  cursor: pointer;
-  color: var(--color-secondary);
-}
-
-/* Navigation */
-
-.nav {
-  display: flex;
-  justify-content: space-between;
   align-items: center;
-  width: 100%;
-  padding: 3.25rem 18.75rem 0;
-  background-color: var(--color-primary);
+  justify-self: flex-end;
+  gap: 20px;
+  padding-top: 2.5rem;
 }
 
-.nav__logo {
-  display: inline-block;
-  max-width: 100%;
-  height: auto;
-  cursor: pointer;
-}
-
-.nav__links {
-  display: flex;
-  align-items: self-start;
-  margin-left: -20rem;
-  list-style: none;
-}
-
-.nav__item {
-  display: inline-block;
-  margin: 0 1.5rem;
-}
-
-.nav__link {
-  transition: all 0.5s;
-  line-height: 1.5;
+.btn--know-us p {
+  color: var(--color-text-header);
   font-weight: var(--fw-400);
-  text-decoration: none;
+  transform: rotate(-90deg);
+}
+
+/* Navbar */
+
+#mainNav {
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+  background-color: var(--color-primary);
+  box-shadow: none;
+}
+
+#mainNav .navbar-toggler {
+  font-size: 0.875rem;
+  padding: 0.75rem 1rem;
+  color: #212529;
+}
+#mainNav .navbar-nav .nav-item .nav-link {
   color: var(--color-text-header);
 }
-
-.nav__link:hover {
+#mainNav .navbar-nav .nav-item .nav-link:hover {
   color: var(--color-secondary);
 }
+#mainNav .navbar-nav .nav-item .nav-link.active {
+  color: #2937f0;
+}
 
-.nav__link-arrow {
-  position: relative;
+.dropdown-toggle:after {
+  border: 0;
+  content: url('design/down.png');
+  line-height: 0.3em;
+  padding-left: 0.5em;
+}
+
+.dropdown-menu {
+  border-radius: 0;
 }
 
 /* Header */
 
 .header {
+  background-color: var(--color-primary);
+  padding-bottom: 0;
   position: relative;
-  top: 0;
-  left: 0;
+  z-index: 1;
+}
+
+.header .header-mockup {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  max-width: 100%;
-  height: 54.75rem;
-  padding: 0;
-  background: var(--color-primary);
-}
-
-.arrow {
-  position: absolute;
-  top: 0.5rem;
-  display: inline-block;
-  margin-left: 0.958rem;
-}
-
-.header::after {
-  width: 14.125rem;
-  content: " ";
-  position: absolute;
-  z-index: 1;
-  bottom: -14rem;
-  right: 0;
-  height: 32.625rem;
-  background-color: var(--color-text-header);
-}
-
-.header__title {
-  position: relative;
-  top: 0;
-  left: 0;
-  display: flex;
   justify-content: center;
-  align-items: flex-start;
+  position: relative;
+}
+
+.header .header-mockup .device-wrapper {
   max-width: 100%;
 }
 
-.img--header {
+/*  Images */
+
+.image-header {
+  padding: 0 !important;
+}
+
+.header-img {
   position: relative;
-  z-index: 10;
-  bottom: 10px;
+  z-index: 3;
+}
+
+.yellow-rectangle {
+  position: absolute;
+  top: 10%;
+  right: 0;
+  z-index: 1;
+}
+
+.pointer-img {
   display: block;
+  padding: 2rem 4.375rem;
 }
 
-.img--header::after {
-  width: 10.625rem;
-  content: " ";
-  position: absolute;
-  z-index: 0;
-  top: 5.625rem;
-  right: 0;
-  height: 24.688rem;
-  background-color: var(--color-secondary);
-}
+/* Section */
 
-.header__img {
+section {
+  padding-top: 0;
+  padding-bottom: 5rem;
   position: relative;
   z-index: 1;
-  right: 0;
-  display: inline-block;
 }
 
-.img--header::before {
-  width: 100%;
-  content: "";
-  position: absolute;
-  bottom: -34rem;
-  right: 0;
-  z-index: 10;
-  background-image: url(design/pointer.png);
-  background-repeat: no-repeat;
-  height: 100%;
-}
-
-.header__title-description {
-  margin-top: 12.5rem;
-  color: var(--color-text-header);
-}
-
-.header__title-description h1 {
-  position: relative;
-  z-index: 1;
-  font-size: 3.653rem;
-  line-height: 4.11rem;
-  font-weight: var(--fw-700);
-  letter-spacing: -0.05em;
-}
-
-.header__title-description h1::after {
-  content: " ";
-  position: absolute;
-  z-index: -1;
-  top: 37%;
-  left: 0.5%;
-  opacity: 0.9;
-  width: 100%;
-  height: 100%;
-  background-image: url(design/underline.png);
-  background-repeat: no-repeat;
-}
-
-h1 .second {
-  font-weight: var(--fw-400);
-}
-
-.header-description {
-  margin: 3.188rem 0.438rem 0 7.188rem;
-  width: 26.625rem;
-  height: 5.313rem;
-  font-size: 1.266rem;
-  font-weight: var(--fw-400);
-  line-height: 1.75rem;
-  letter-spacing: -0.04em;
-}
-
-.header-description span {
-  text-decoration-line: line-through;
-}
-
-.btn--know-us p {
-  transform: rotate(-90deg);
-  margin-bottom: 3em;
-  margin-left: -0.5rem;
-  font-size: 1.266rem;
-  line-height: 1.75rem;
-  font-weight: var(--fw-700);
-  letter-spacing: -0.04em;
-  color: var(--color-text-header);
+.section-wrap {
+  flex-direction: column-reverse !important;
 }
 
 .office__description {
-  position: absolute;
-  z-index: 2;
-  bottom: -42rem;
-  right: 0;
-  display: flex;
-  flex-direction: column;
-  width: 38.813rem;
-  height: 53.875rem;
-  padding: 0 4.375rem;
   background-color: var(--color-tertiary);
-}
-
-.pointer {
-  position: relative;
-  flex-basis: 50%;
-  width: 100%;
+  padding: 2rem 2.5rem;
 }
 
 .paragraphs {
@@ -296,62 +248,247 @@ h1 .second {
   font-weight: var(--fw-400);
 }
 
-/* Section */
-
-.section {
-  position: relative;
-  min-height: 100vh;
-  width: 100%;
-  padding: 0 18.75rem 10rem;
-  background-color: var(--color-quaternary);
-  color: var(--color-text-main);
+.group-section {
+  margin-top: 5rem;
 }
 
-.section h2 {
-  width: 30.063rem;
-  padding-top: 10.625rem;
+.group-section h2 {
   font-size: 2.886rem;
   line-height: 3.25rem;
   font-weight: var(--fw-400);
   letter-spacing: -0.05em;
-}
-
-.section h2 span {
-  font-weight: var(--fw-700);
-}
-
-.section img {
-  display: inline-block;
+  color: var(--color-text-main);
   margin: 5rem 0;
 }
 
-.section__group {
-  max-width: 100%;
+.group-section h2 span {
+  font-weight: var(--fw-700);
 }
 
-.section_description--comunication h5 {
+/* .section_description {
+} */
+
+.section_description h3 {
   margin-bottom: 1.375rem;
   font-size: 1.602rem;
+  line-height: 2.063rem;
   font-weight: var(--fw-400);
+  color: var(--color-text-main);
 }
 
-.section_description--comunication p {
-  width: 22.875rem;
+.section_description h3 p {
   font-size: 1rem;
   font-weight: var(--fw-400);
   color: var(--color-text-description);
 }
 
-.section_description--comunication p span {
+.span-strong {
   font-weight: var(--fw-700);
 }
 
-.section__office {
-  position: absolute;
-  z-index: 2;
-  bottom: 0;
-  right: 0;
-  margin-bottom: 0;
-  max-width: 100%;
-  padding-right: 18.75rem;
+@media screen and (min-width: 360px) {
+  .header {
+    padding-top: 9.5rem;
+    position: relative;
+  }
+
+  .white-rectangle {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  .header {
+    padding-top: 9.5rem;
+    position: relative;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .first::after {
+    width: 70%;
+    content: ' ';
+    position: absolute;
+    z-index: -1;
+    bottom: -38%;
+    left: 50%;
+    transform: translate(-50%);
+    opacity: 0.9;
+    height: 100%;
+    background-image: url(design/underline.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+
+  .header {
+    padding-top: 9.5rem;
+  }
+
+  section {
+    padding-top: 0;
+  }
+
+  .section-wrap,
+  .section-wrap-two {
+    align-items: center;
+  }
+
+  .section-wrap .col-md-6,
+  .section-wrap-two .col-md-6 {
+    width: 100%;
+  }
+
+  .office__description {
+    padding: 2.5rem 4.375rem;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  h1,
+  .h1 {
+    width: 35.5rem;
+  }
+
+  .first::after {
+    width: 80%;
+    bottom: -25%;
+    left: 20%;
+    transform: translate(-25%);
+  }
+
+  .lead {
+    margin-left: 4.5rem !important;
+  }
+
+  .btn--know-us {
+    align-items: center;
+    gap: 20px;
+    position: absolute;
+    bottom: 0;
+    left: 2%;
+  }
+
+  .header {
+    padding-top: 9.5rem;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  h1,
+  .h1 {
+    font-size: 3.653rem;
+    width: 30.5rem;
+  }
+
+  .first::after {
+    width: 90%;
+    left: 25%;
+    transform: translate(-27%);
+  }
+
+  .header {
+    padding-top: 3.5rem;
+  }
+
+  .header-wrap {
+    padding-right: 12rem !important;
+    padding-left: 8.75rem !important;
+  }
+
+  .header-wrap .row {
+    padding: 0 !important;
+  }
+
+  .white-rectangle {
+    display: block;
+    position: absolute;
+    top: 81%;
+    right: 0;
+    z-index: 1;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .section-wrap {
+    flex-direction: row !important;
+  }
+
+  .section-wrap .col-md-6,
+  .section-wrap-two .col-md-6 {
+    width: 50%;
+  }
+
+  .office__description {
+    background-color: var(--color-tertiary);
+    padding: 2rem 1.375rem 6.125rem;
+    /* transform: translateY(-20%); */
+    z-index: 1;
+    /* max-width: 38.813rem;
+    max-height: 53.875rem; */
+  }
+}
+
+/* -------------- */
+
+@media screen and (min-width: 1244px) {
+  .btn--know-us {
+    align-items: center;
+    gap: 20px;
+    position: absolute;
+    bottom: 0;
+    left: 8%;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  h1,
+  .h1 {
+    width: 34.5rem;
+  }
+
+  .first::after {
+    width: 80%;
+    bottom: -38%;
+    left: 20%;
+    transform: translate(-25%);
+  }
+
+  .btn--know-us {
+    left: 10%;
+  }
+
+  .white-rectangle {
+    top: 68%;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .header {
+    position: relative;
+  }
+
+  .white-rectangle {
+    top: 69%;
+  }
+
+  .office__description {
+    padding: 2rem 4.375rem 6.125rem;
+  }
+
+  .paragraphs {
+    margin: 0;
+    padding: 0;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .btn--know-us {
+    left: 14%;
+  }
+}
+
+@media screen and (min-width: 1900px) {
+  .btn--know-us {
+    left: 18%;
+  }
 }
